--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "E:\\Softwares\\python3.7.6\\python.exe"
+    "python.pythonPath": "E:\\programming\\#Python\\env_develop\\Scripts\\python.exe"
 }
